k8s/apps/fraternity/frat-shop/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frat-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frat-shop
  template:
    metadata:
      labels:
        component: frat-shop
    spec:
      containers:
        - name: app
          image: gastbob40/frat_shop
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
      securityContext:
        fsGroup: 2000
