k8s/apps/fraternity/frat-shop/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frat-shop
spec:
  type: ClusterIP
  selector:
    component: frat-shop
  ports:
    - name: http
      port: 80
      targetPort: http
